<resources>
    <string name="app_name">Dairibord Zimbabwe</string>
    <string name="company_title">More than just milk</string>

    <!-- login screen strings -->
    <string name="sign_in_header_string">Sign in details</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="sign_in_btn_string">Sign in</string>

    <!-- user screen strings -->
    <string name="first_name_string">First name(s)</string>
    <string name="last_name_string">Last name</string>
    <string name="email_string">Email address</string>
    <string name="users_header_string">User details</string>

    <!-- suppliers screen strings -->
    <string name="suppliers_header_string">Supplier details</string>
    <string name="supplier_name_string">Supplier name</string>
    <string name="address_string">Address</string>
    <string name="phone_number_string">Mobile phone number</string>

    <!-- customer screen strings -->
    <string name="customer_header_screen">Customer details</string>
    <string name="customer_name_string">Customer name</string>
    <string name="contact_person_string">Contact person</string>
    <string name="contact_number_string">Phone number</string>

    <!-- deliveries screen strings -->
    <string name="deliveries_header_string">Delivery details</string>
    <string name="supplier_string">Supplier</string>
    <string name="quantity_delivered_string">Quantity delivered</string>

    <!-- products screen strings -->
    <string name="products_header_string">Product details</string>
    <string name="product_name_string">Product name</string>
    <string name="stock_quantity_string">Quantity in stock</string>
    <string name="milk_required_string">Liters of milk required to make one unit</string>

    <!-- save button string -->
    <string name="save_button_string">Save</string>

    <!-- navigation menu strings -->
    <string name="nav_home_string">Home</string>
    <string name="nav_suppliers_string">Suppliers</string>
    <string name="nav_customers_string">Customers</string>
    <string name="nav_deliveries_string">Deliveries</string>
    <string name="nav_dispatches_string">Dispatches</string>
    <string name="nav_products_string">Products</string>
    <string name="nav_users_string">Users</string>
    <string name="nav_change_password_string">Change password</string>
    <string name="nav_sign_out_string">Sign out</string>

    <!-- navigation drawer strings -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>