<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        style="@style/primary_linear">

        <TextView
            style="@style/header_style"
            android:text="@string/customer_header_screen" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_layout"
            android:id="@+id/customer_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/customer_name"
                android:id="@+id/edtCustomerName"
                android:hint="@string/customer_name_string" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_layout"
            android:id="@+id/address_layout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/address"
                android:id="@+id/edtAddress"
                android:hint="@string/address_string" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_layout"
            android:id="@+id/contact_person_layout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/name_style"
                android:id="@+id/edtContactPerson"
                android:hint="@string/contact_person_string" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_layout"
            android:id="@+id/phone_number_layout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/phone_number"
                android:id="@+id/edtPhoneNumber"
                android:hint="@string/contact_number_string" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/primary_button"
            android:id="@+id/btnSave"
            android:text="@string/save_button_string" />

        <ScrollView
            style="@style/scroll_view">

            <androidx.recyclerview.widget.RecyclerView
                style="@style/recycler_view"
                android:id="@+id/rcvCustomers" />

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>