<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/suppliers_coordinator"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/primary_linear">

        <TextView
            style="@style/header_style"
            android:text="@string/suppliers_header_string" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/supplier_name_layout"
            style="@style/input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSupplierName"
                android:hint="@string/supplier_name_string"
                style="@style/customer_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_layout"
            style="@style/input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddress"
                android:hint="@string/supplier_name_string"
                style="@style/address" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_layout"
            style="@style/input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhoneNumber"
                android:hint="@string/phone_number_string"
                style="@style/phone_number" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/primary_button"
            android:id="@+id/btnSave"
            android:text="@string/save_button_string" />

        <ScrollView style="@style/scroll_view">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvSuppliers"
                style="@style/recycler_view" />

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>