<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.Login">

    <LinearLayout
        android:id="@+id/top_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in_header_string"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtUsername"
                android:hint="@string/username_string"
                android:inputType="text"
                android:drawableStart="@drawable/ic_baseline_person_outline"
                android:drawablePadding="10dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPassword"
                android:drawableStart="@drawable/ic_baseline_lock"
                android:drawablePadding="10dp"
                android:hint="@string/username_string"
                android:inputType="textPassword"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:text="@string/sign_in_btn_string"
            style="@style/primary_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>